--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <title>Wiki</title>
   </head>
   <body>
+        <h1 class="header">Wiki Random Search</h1>
       <div class="search">
         <input
           type="text"
           class="searchTerm"
-          placeholder="Search"
+          placeholder="Search?"
           id="title"
         />
         <button type="submit" class="searchButton" id="searchBtn">
@@ -30,7 +31,11 @@
       </div>
     </div>
 
-    <div id="result"></div>
+    <div id="result">
 
+    </div>
+    <div class="loading">
+    <img src="4.gif" alt="">
+    <div>
   </body>
 </html>
